--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.4",
         "laravel/framework": "^6.20.26",
         "laravel/tinker": "^2.5",
+        "laravolt/indonesia": "^0.26.0",
         "realrashid/sweet-alert": "^4.1"
     },
     "require-dev": {
